[FIX] backend quality - AddressService: Replace this usage of 'Stream.collect(Collectors.toList())' with 'Stream.toList()'